<resources>
	<string name="app_name">MNote</string>
	<string name="pleaseSignIn">登录开启新世界</string>
	<string name="account">账号</string>
	<string name="password">密码</string>
	<string name="signIn">登录</string>
	<string name="signUp">注册</string>
	<string name="phone">输入手机号码</string>
	<string name="nonce">验证码</string>
	<string name="getNonce">获取验证码</string>
	<string name="uploadPrompt">上传后会覆盖云端数据</string>
	<string name="upload">上传</string>
	<string name="downloadPrompt">下载后会覆盖本地数据</string>
	<string name="download">下载</string>
	<string name="signOut">退出</string>
	<string name="signOutHint">退出后不会清除笔记</string>
	<string name="accountOccupied">这个账号已经注册过啦</string>
	<string name="gotoSignIn">转去登录</string>
	<string name="forgetPassword">忘记密码</string>
	<string name="userCenter">个人中心</string>
	<string name="newNote">新建笔记</string>
	<string name="preview">预览</string>
	<string name="export">导出</string>
	<string name="changeColor">颜色主题</string>
	<string name="changeName">修改昵称</string>
	<string name="changePassword">修改密码</string>
	<string name="changePasswordHint">修改后需要重新登录</string>
	<string name="save">确定</string>
	<string name="cancel">取消</string>
	<string name="noSdcard">没有可用的SD卡</string>
	<string name="exit">那就退出吧</string>

	<string name="avatarCamera">拍照</string>
	<string name="avatarGallery">相册</string>
	<string name="colorBlue">蓝色</string>
	<string name="colorGray">灰色</string>
	<string name="colorRed">红色</string>
	<string name="colorCyan">青色</string>
	<string name="colorGreen">绿色</string>
	<string name="colorOrange">橙色</string>
	<string name="colorYellow">黄色</string>
	<string name="colorPink">粉色</string>
	<string name="colorPurple">紫色</string>
	<string name="sortCreate">创建时间</string>
	<string name="sortUpdate">修改时间</string>
	<string name="oldPassword">原密码:6至16位字母数字下划线</string>
	<string name="newPassword">新密码:6至16位字母数字下划线</string>
	<string name="nameHint">长度10位以内</string>
	<string name="noNote">一片贫瘠的土地</string>
	<string name="title_activity_main2">Main2Activity</string>
</resources>
