<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/shape_dialog"
	android:orientation="vertical">

	<TextView
		android:id="@+id/avatarCamera"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center_horizontal"
		android:onClick="changeAvatarWith"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:text="@string/avatarCamera"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/avatarGallery"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center_horizontal"
		android:onClick="changeAvatarWith"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:text="@string/avatarGallery"
		android:textAppearance="@style/TextAppearance.AppCompat.Body1"
		android:textSize="20sp"/>

	<TextView
		android:id="@+id/avatarCancel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/selector_cancel"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center_horizontal"
		android:onClick="changeAvatarWith"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:text="@string/cancel"
		android:textColor="@color/colorCursor"
		android:textSize="20sp"/>

</LinearLayout>