<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorActivity"
	tools:context="com.lin.mnote.SignInActivity">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			app:title="@string/signIn"/>

	</android.support.design.widget.AppBarLayout>

	<de.hdodenhof.circleimageview.CircleImageView
		android:id="@+id/imageViewLogo"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:scaleType="centerCrop"
		android:src="@mipmap/ic_launcher_round"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>

	<RelativeLayout
		android:id="@+id/changePasswordOld"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="48dp"
		android:background="@drawable/rectangle_with_radius"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

		<EditText
			android:id="@+id/editTextAccount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginEnd="30dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="30dp"
			android:layout_marginStart="10dp"
			android:background="@null"
			android:hint="@string/account"
			android:inputType="phone"
			android:textColorHint="@color/colorCursor"
			android:textCursorDrawable="@drawable/color_cursor"
			android:textSize="20sp"/>

		<ImageView
			android:id="@+id/imageViewAccountClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:padding="2dp"
			android:visibility="invisible"
			app:srcCompat="@drawable/ic_clear_black_24dp"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/relativeLayoutPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/rectangle_with_radius"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/changePasswordOld">

		<EditText
			android:id="@+id/editTextPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginEnd="30dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="30dp"
			android:layout_marginStart="10dp"
			android:background="@null"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:textColorHint="@color/colorCursor"
			android:textCursorDrawable="@drawable/color_cursor"
			android:textSize="20sp"/>

		<ImageView
			android:id="@+id/imageViewPasswordClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:padding="2dp"
			android:visibility="invisible"
			app:srcCompat="@drawable/ic_clear_black_24dp"/>
	</RelativeLayout>

	<Button
		android:id="@+id/buttonSignIn"
		android:layout_width="0dp"
		android:layout_height="46dp"
		android:layout_marginEnd="32dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="48dp"
		android:background="@drawable/button_blue"
		android:onClick="buttonSignIn"
		android:text="@string/signIn"
		android:textColor="#fff"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/relativeLayoutPassword"/>

	<TextView
		android:id="@+id/textViewNewRegister"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginStart="4dp"
		android:clickable="true"
		android:focusable="true"
		android:onClick="textViewNewRegister"
		android:text="@string/newRegister"
		android:textColor="@color/colorBlue"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<TextView
		android:id="@+id/textViewForgetPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:layout_marginEnd="4dp"
		android:layout_marginRight="4dp"
		android:clickable="true"
		android:focusable="true"
		android:onClick="textViewForgetPassword"
		android:text="@string/forgetPassword"
		android:textColor="@color/colorBlue"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>